(chores) camel-core-processor: use unmodifiable list when possible