@@ -16,9 +16,7 @@
  */
 package org.apache.camel.processor.loadbalancer;
 
-import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public abstract class WeightedLoadBalancer extends QueueLoadBalancer {
     protected final List<DistributionRatio> ratios;
@@ -28,10 +26,9 @@ public abstract class WeightedLoadBalancer extends QueueLoadBalancer {
     transient int lastIndex = -1;
 
     public WeightedLoadBalancer(List<Integer> distributionRatios) {
-        List<DistributionRatio> ratios = distributionRatios.stream()
+        this.ratios = distributionRatios.stream()
                 .map(DistributionRatio::new)
-                .collect(Collectors.toList());
-        this.ratios = Collections.unmodifiableList(ratios);
+                .toList();
         this.distributionRatioSum = ratios.stream()
                 .mapToInt(DistributionRatio::getDistributionWeight).sum();
         this.runtimeRatioSum = distributionRatioSum;
